--- a/package.json
+++ b/package.json
@@ -6,9 +6,16 @@
     "dev": "vite --port 3000",
     "dev:party": "partykit dev",
     "dev:all": "concurrently \"npm run dev\" \"npm run dev:party\"",
+    "dev:nitro": "nitro dev",
+    "dev:full": "node scripts/dev.js",
+    "dev:simple": "node scripts/dev-simple.js",
+    "dev:api": "nitro dev --port 3001",
     "start": "vite --port 3000",
     "build": "vite build && tsc",
+    "build:nitro": "nitro build",
+    "build:all": "npm run build && npm run build:nitro",
     "serve": "vite preview",
+    "preview": "nitro preview",
     "test": "vitest run",
     "lint": "eslint",
     "format": "prettier",
@@ -21,6 +28,8 @@
     "@tanstack/react-router": "^1.132.0",
     "@tanstack/react-router-devtools": "^1.132.0",
     "@tanstack/router-plugin": "^1.132.0",
+    "@vercel/og": "^0.8.5",
+    "nitropack": "^2.12.6",
     "partykit": "^0.0.115",
     "partysocket": "^1.1.5",
     "react": "^19.0.0",
