chore: update configuration for Netlify deployment and improve caching
- Change build command and publish directory in netlify.toml
- Refactor nitro.config.ts for better caching and route handling
- Update package.json with postinstall and types scripts
- Adjust tsconfig.json for Nitro-specific optimizations
- Modify OG image generation logic in api/og.ts and utils/og-image.ts

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,24 +1,11 @@
 [build]
-  command = "bun run build:all"
-  publish = ".output/public"
+  command = "npm run build:all"
+  publish = "dist"
 
 [build.environment]
   NODE_VERSION = "20"
 
-[[redirects]]
-  from = "/api/*"
-  to = "/.netlify/functions/:splat"
-  status = 200
-
-[[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
-
-[functions]
-  directory = ".output/server"
-
 [[headers]]
-  for = "/api/og"
+  for = "/api/og*"
   [headers.values]
     Cache-Control = "public, max-age=3600, s-maxage=86400"
