--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,12 @@
 [build]
-  command = "npm run build:all"
+  command = "npm run build"
   publish = "dist"
 
 [build.environment]
   NODE_VERSION = "20"
+
+[functions]
+  directory = ".netlify/functions"
 
 [[redirects]]
   from = "/api/*"
