--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "preview": "nitro preview",
     "test": "vitest run",
     "lint": "eslint",
+    "lint:fix": "eslint --fix",
     "format": "prettier",
     "check": "prettier --write . && eslint --fix",
     "deploy:party": "partykit deploy",
