--- a/netlify.toml
+++ b/netlify.toml
@@ -13,6 +13,11 @@
   to = "/.netlify/functions/:splat"
   status = 200
 
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
+
 [[headers]]
   for = "/api/og*"
   [headers.values]
