--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "partysocket": "^1.1.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "tailwindcss": "^4.0.6"
   },
   "devDependencies": {
