--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "@types/node": "^22.10.2",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
+    "@vite-pwa/assets-generator": "^1.0.2",
     "@vitejs/plugin-react": "^4.3.4",
     "concurrently": "^9.2.1",
     "eslint": "^9.36.0",
@@ -78,8 +79,10 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "jsdom": "^26.0.0",
     "prettier": "^3.5.3",
+    "sharp": "^0.34.5",
     "typescript": "^5.7.2",
     "vite": "^6.3.5",
+    "vite-plugin-pwa": "^1.1.0",
     "vitest": "^3.0.5",
     "web-vitals": "^4.2.4"
   }
