--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,27 +1,34 @@
 {
   "short_name": "Typing Trainer",
   "name": "Real-time Typing Trainer",
-  "description": "A real-time typing trainer with live spectator mode and collaborative typing sessions",
+  "description": "Practice and improve your typing speed with real-time feedback",
   "icons": [
     {
-      "src": "https://fav.farm/🇳🇬",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "src": "pwa-64x64.png",
+      "sizes": "64x64",
+      "type": "image/png"
     },
     {
-      "src": "https://fav.farm/🇳🇬",
-      "type": "image/png",
-      "sizes": "192x192"
+      "src": "pwa-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
     },
     {
-      "src": "https://fav.farm/🇳🇬",
+      "src": "pwa-512x512.png",
+      "sizes": "512x512",
       "type": "image/png",
-      "sizes": "512x512"
+      "purpose": "any"
+    },
+    {
+      "src": "maskable-icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
     }
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#3b82f6",
+  "theme_color": "#8b5cf6",
   "background_color": "#ffffff",
   "orientation": "portrait-primary",
   "categories": ["education", "productivity", "utilities"],
