feat: add visual keyboard display and error feedback UI
- Add KeyboardDisplay component with multiple layout support (QWERTY, COLEMAK, DVORAK, AZERTY, ABCDEF)
- Integrate keyboard visualization in typing input and spectator views with active key highlighting
- Refactor ErrorFeedback component to collapsible details/summary format with itemized inline display
- Add error feedback visibility to competition and realtime typing trainer flows
- Improve spectator experience with SpectatorTypingProvider, SpectatorTextDisplay, and keyboard display
- Enhance text cursor to highlight entire current word instead of single character
- Update session URL routing to use dedicated spectator and session routes
- Add search params handling for session and role-based redirects
- Remove Nitro dependencies and configuration, simplify build setup
- Add motion package for animations
- Update dependencies and lockfile

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,6 @@
       "@/*": ["./src/*"]
     },
 
-    /* Nitro-specific optimizations */
     "resolveJsonModule": true,
     "types": ["vite/client", "vite-plugin-pwa/client", "node", "vitest"],
     "allowImportingTsExtensions": true,
@@ -33,9 +32,7 @@
     "**/*.tsx",
     "eslint.config.js",
     "prettier.config.js",
-    "vite.config.js",
-    "nitro.config.ts",
-    "api/**/*.ts"
+    "vite.config.js"
   ],
   "exclude": ["node_modules", ".output", "dist"]
 }
